# gpyrn

./: .travis.yml  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml  install.yml  python-package.yml  python-publish.yml
benchmarks/: index.html
docs/: README.md  benchmarks.md  getting_started.md  index.md  installation.md
docs/examples/: index.md  one_dataset.ipynb  several_datasets.ipynb  several_datasets.md
docs/reference/: covfunc.md  meanfunc.md
examples/: index.html
examples/one_dataset/: index.html
examples/several_datasets/: index.html
getting_started/: index.html
gpyrn/: README.md  __init__.py  _gp.py  _plots.py  _utils.py  covfunc.py  evidence.py  meanfield.py  meanfunc.py  nonparametric.py
gpyrn/Example/: README.md  example_1.py  example_2.py  example_3.py  untitled1.py
gpyrn/datasets/: Solar_observations.txt
gpyrn/examples/: README.md  example_1.py  example_2.py  example_3.py  example_4.py
installation/: index.html
model_description/: index.html
reference/covfunc/: index.html
reference/meanfunc/: index.html
search/: search_index.json
tests/: test_cov_functions.py  test_imports.py  test_inference.py  test_mean_functions.py
