[tool.poetry]
name = "gpyrn"
version = "0.1.0"
description = ""
authors = ["Kamuish <andremiguel952@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
matplotlib = "^3.5.2"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
